Criação da dimensão locais

--- a/models/staging/sap_adw/sources.yml
+++ b/models/staging/sap_adw/sources.yml
@@ -13,4 +13,24 @@ sources:
           - name: personid
             tests:
               - unique
+      - name: salesterritory
+        columns:
+          - name: territoryid
+            tests:
+              - unique
+              - not_null
+      - name: address
+        columns:
+          - name: addressid
+            tests:
+              - unique
+              - not_null
+      - name: stateprovince
+        columns:
+          - name: stateprovinceid
+            tests:
+              - unique
+              - not_null
+              
+                
               
