Criação da dimensão loja. Não foram feitos os testes ainda.

--- a/models/staging/sap_adw/sources.yml
+++ b/models/staging/sap_adw/sources.yml
@@ -31,6 +31,20 @@ sources:
             tests:
               - unique
               - not_null
+      - name: store
+        columns:
+          - name: businessentityid
+            tests:
+              - unique
+              - not_null
+
+      - name: businessentityaddress
+        columns:
+          - name: businessentityid
+              
+              
+              
+
               
                 
               
