--- a/models/staging/sap_adw/sources.yml
+++ b/models/staging/sap_adw/sources.yml
@@ -60,6 +60,19 @@ sources:
               - unique
               - not_null
       - name: salesorderheadersalesreason
+      - name: salesorderheader
+        columns:
+          - name: salesorderid
+            tests:
+              - unique
+              - not_null
+      - name: salesorderdetail
+        columns:
+          - name: salesorderdetailid
+            tests: 
+              - unique
+              - not_null
+              
 
               
               
