--- a/models/staging/sap_adw/sources.yml
+++ b/models/staging/sap_adw/sources.yml
@@ -72,6 +72,14 @@ sources:
             tests: 
               - unique
               - not_null
+      - name: salesperson
+        columns: 
+          - name: businessentityid
+            tests:
+              - unique
+              - not_null
+              
+
               
 
               
