Adicionei uma fonte de dados (pessoa) e inclui ela na dim_clientes

--- a/models/marts/dim_clientes.yml
+++ b/models/marts/dim_clientes.yml
@@ -8,5 +8,17 @@ models:
         tests:
           - unique
           - not_null
+      
+      - name: pessoa_id
+        description: Chave estrangeira da tabela pessoas.
+        tests:
+          - unique
+          - not_null
+      
+      - name: loja_id
+        description: Chave estrangeira da tabela lojas.
+
+      - name: pessoa_nome_completo
+        description: Nome completo do cliente.
 
           
