--- a/models/staging/sap_adw/sources.yml
+++ b/models/staging/sap_adw/sources.yml
@@ -78,6 +78,12 @@ sources:
             tests:
               - unique
               - not_null
+      - name: person
+        columns:
+          - name: businessentityid
+            tests: 
+              - unique
+              - not_null
               
 
               
